# avahi-json

./: README.md  pyproject.toml  test-resolve.py
avahi_json/: main.py
